Finished most of About Me section

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
     --color-primary-variant: rgba(77,181,255,0.4);
     --color-text: black;
     --color-light: darkblue;
+    --color-dark: rgba(15, 4, 4, 0.799);
 
     --transition: all 400ms ease;
 
