Finished portfolio section and working on contact section

--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,12 @@ a:hover {
     color: var(--color-bg);
 }
 
+.btn-secondary {
+    background: grey;
+    color: var(--color-bg);
+    border: none;
+}
+
 img {
     display: block;
     width: 100%;
